# skill_scanner_clawguard

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
examples/benign_skill/: SKILL.md  main.py
examples/suspicious_skill/: SKILL.md  install.py
scripts/: run_batch_scan.py
static_skill_scanner/: __init__.py  aggregator.py  analyzer_factory.py  batch_scan.py  cli.py  models.py  normalizer.py  parser.py
static_skill_scanner/analyzers/: __init__.py  base.py  manifest.py  pattern.py  resource.py
