[project]
name = "static-skill-scanner"
version = "0.1.0"
description = "Minimal static skill scanner prototype"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
skill-scan = "static_skill_scanner.cli:main"
skill-scan-batch = "static_skill_scanner.batch_scan:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
